--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-Privacy Policy
+<b>Privacy Policy</b><br><br>
 
-This privacy policy applies to mobile app Reenit.
+This privacy policy applies to mobile app Reenit.<br>
+<br>
+The developer, Jukka Nokso, does not collect or store any personal information
+about users with app Reenit. App does not require registration and the
+identities of the users of Reenit is not known. If any personal information
+about a user is ever received, it will not be shared with a third party.<br>
+<br>
+Reenit is distributed by Google Play Store and it does not track usage
+statistics with Google Analytics service. Some info about app installations and
+usage is provided by Google Play Developer Console. This data does not contain
+any personally identifying information and is not shared with third
+parties.<br>
+<br>
+<br>
+<br>
+In any questions about this Privacy Policy, please contact
+jukka.nokso@gmail.com .
 
-The developer, Jukka Nokso, does not collect or store any personal information about users with app Reenit. App does not require registration and the identities of the users of Reenit is not known. If any personal information about a user is ever received, it will not be shared with a third party.
-
-Reenit is distributed by Google Play Store and it does not track usage statistics with Google Analytics service. Some info about app installations and usage is provided by Google Play Developer Console. This data does not contain any personally identifying information and is not shared with third parties.
-
-
-
-In any questions about this Privacy Policy, please contact jukka.nokso@gmail.com .
